cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_05451_cf-example-9.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Deploy 2 VPC with 2 AZ, IGW, NGW, WebServers, and VPC Peering.",
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "VPC1 Configuration Parameters"
                    },
                    "Parameters": [
                        "pmSite1VpcId",
                        "pmSite1VpcRegion",
                        "pmSite1Az1",
                        "pmSite1Az2",
                        "pmSite1VpcCidr",
                        "pmSite1PubSubnetCidr1",
                        "pmSite1PubSubnetCidr2",
                        "pmSite1PriSubnetCidr1",
                        "pmSite1PriSubnetCidr2"
                    ]
                },
                {
                    "Label": {
                        "default": "VPC2 Configuration Parameters"
                    },
                    "Parameters": [
                        "pmSite2VpcId",
                        "pmSite2VpcRegion",
                        "pmSite2Az1",
                        "pmSite2Az2",
                        "pmSite2VpcCidr",
                        "pmSite2PubSubnetCidr1",
                        "pmSite2PubSubnetCidr2",
                        "pmSite2PriSubnetCidr1",
                        "pmSite2PriSubnetCidr2"
                    ]
                },
                {
                    "Label": {
                        "default": "EC2 Configuration Parameters"
                    },
                    "Parameters": [
                        "pmEc2ImageId",
                        "pmEc2InstanceType",
                        "pmEc2VolumeSize",
                        "pmEc2AccessKeyId"
                    ]
                }
            ],
            "ParameterLabels": {
                "pmSite1VpcId": {
                    "default": "Enter VPC1 id"
                },
                "pmSite1VpcRegion": {
                    "default": "Enter VPC1 region"
                },
                "pmSite1Az1": {
                    "default": "Enter VPC1 AZ1"
                },
                "pmSite1Az2": {
                    "default": "Enter VPC1 AZ2"
                },
                "pmSite1VpcCidr": {
                    "default": "Enter VPC1 CIDR"
                },
                "pmSite1PubSubnetCidr1": {
                    "default": "Enter VPC1 public subnet1"
                },
                "pmSite1PubSubnetCidr2": {
                    "default": "Enter VPC1 public subnet2"
                },
                "pmSite1PriSubnetCidr1": {
                    "default": "Enter VPC1 private subnet1"
                },
                "pmSite1PriSubnetCidr2": {
                    "default": "Enter VPC1 private subnet2"
                },
                "pmSite2VpcId": {
                    "default": "Enter VPC2 id"
                },
                "pmSite2VpcRegion": {
                    "default": "Enter VPC2 region"
                },
                "pmSite2Az1": {
                    "default": "Enter VPC2 AZ1"
                },
                "pmSite2Az2": {
                    "default": "Enter VPC2 AZ2"
                },
                "pmSite2VpcCidr": {
                    "default": "Enter VPC2 CIDR"
                },
                "pmSite2PubSubnetCidr1": {
                    "default": "Enter VPC2 public subnet1"
                },
                "pmSite2PubSubnetCidr2": {
                    "default": "Enter VPC2 public subnet2"
                },
                "pmSite2PriSubnetCidr1": {
                    "default": "Enter VPC2 private subnet1"
                },
                "pmSite2PriSubnetCidr2": {
                    "default": "Enter VPC2 private subnet2"
                },
                "pmEc2ImageId": {
                    "default": "Enter EC2 image id"
                },
                "pmEc2InstanceType": {
                    "default": "Enter EC2 instance type"
                },
                "pmEc2VolumeSize": {
                    "default": "Enter EC2 volume size"
                },
                "pmEc2AccessKeyId": {
                    "default": "Enter EC2 SSH access key"
                }
            }
        }
    },
    "Parameters": {
        "pmSite1VpcId": {
            "Type": "String",
            "Default": "MGMT"
        },
        "pmSite1VpcRegion": {
            "Type": "String",
            "Default": "us-east-1"
        },
        "pmSite1VpcCidr": {
            "Type": "String",
            "Default": "10.15.0.0/16"
        },
        "pmSite1PubSubnetCidr1": {
            "Type": "String",
            "Default": "10.15.1.0/24"
        },
        "pmSite1PubSubnetCidr2": {
            "Type": "String",
            "Default": "10.15.2.0/24"
        },
        "pmSite1PriSubnetCidr1": {
            "Type": "String",
            "Default": "10.15.10.0/24"
        },
        "pmSite1PriSubnetCidr2": {
            "Type": "String",
            "Default": "10.15.12.0/24"
        },
        "pmSite1Az1": {
            "Type": "AWS::EC2::AvailabilityZone::Name",
            "Default": "us-east-1a"
        },
        "pmSite1Az2": {
            "Type": "AWS::EC2::AvailabilityZone::Name",
            "Default": "us-east-1b"
        },
        "pmSite2VpcId": {
            "Type": "String",
            "Default": "PROD"
        },
        "pmSite2VpcRegion": {
            "Type": "String",
            "Default": "us-east-1"
        },
        "pmSite2VpcCidr": {
            "Type": "String",
            "Default": "10.105.0.0/16"
        },
        "pmSite2PubSubnetCidr1": {
            "Type": "String",
            "Default": "10.105.1.0/24"
        },
        "pmSite2PubSubnetCidr2": {
            "Type": "String",
            "Default": "10.105.2.0/24"
        },
        "pmSite2PriSubnetCidr1": {
            "Type": "String",
            "Default": "10.105.10.0/24"
        },
        "pmSite2PriSubnetCidr2": {
            "Type": "String",
            "Default": "10.105.12.0/24"
        },
        "pmSite2Az1": {
            "Type": "AWS::EC2::AvailabilityZone::Name",
            "Default": "us-east-1a"
        },
        "pmSite2Az2": {
            "Type": "AWS::EC2::AvailabilityZone::Name",
            "Default": "us-east-1b"
        },
        "pmEc2ImageId": {
            "Type": "String",
            "Default": "ami-28456852"
        },
        "pmEc2InstanceType": {
            "Type": "String",
            "Default": "t2.micro"
        },
        "pmEc2VolumeSize": {
            "Type": "Number",
            "Default": "5"
        },
        "pmEc2AccessKeyId": {
            "Type": "AWS::EC2::KeyPair::KeyName",
            "Default": "aws_cory1"
        }
    },
    "Mappings": {},
    "Resources": {
        "Site1VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "pmSite1VpcCidr"
                },
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "pmSite1VpcId"
                        }
                    }
                ]
            }
        },
        "Site2VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "pmSite2VpcCidr"
                },
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "pmSite2VpcId"
                        }
                    }
                ]
            }
        },
        "Site1ToSite2VPCConnect": {
            "Type": "AWS::EC2::VPCPeeringConnection",
            "Properties": {
                "VpcId": {
                    "Ref": "Site1VPC"
                },
                "PeerVpcId": {
                    "Ref": "Site2VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Site1-To-Site2"
                    }
                ]
            }
        },
        "Site1EIP1": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "Site1NGW1": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "Site1EIP1",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "Site1PublicSubnet1"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite1VpcId"
                                    },
                                    "NGW1"
                                ]
                            ]
                        }
                    }
                ]
            },
            "DependsOn": [
                "Site1PublicRouteTable"
            ]
        },
        "Site1EIP2": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "Site1NGW2": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "Site1EIP2",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "Site1PublicSubnet2"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite1VpcId"
                                    },
                                    "NGW2"
                                ]
                            ]
                        }
                    }
                ]
            },
            "DependsOn": [
                "Site1PublicRouteTable"
            ]
        },
        "Site2EIP1": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "Site2NGW1": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "Site2EIP1",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "Site2PublicSubnet1"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite2VpcId"
                                    },
                                    "NGW1"
                                ]
                            ]
                        }
                    }
                ]
            },
            "DependsOn": [
                "Site2PublicRouteTable"
            ]
        },
        "Site2EIP2": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "Site2NGW2": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "Site2EIP2",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "Site2PublicSubnet2"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite2VpcId"
                                    },
                                    "NGW2"
                                ]
                            ]
                        }
                    }
                ]
            },
            "DependsOn": [
                "Site2PublicRouteTable"
            ]
        },
        "Site1IGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite1VpcId"
                                    },
                                    "IGW"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "Site1IGWAttach": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "Site1VPC"
                },
                "InternetGatewayId": {
                    "Ref": "Site1IGW"
                }
            }
        },
        "Site2IGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite2VpcId"
                                    },
                                    "IGW"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "Site2IGWAttach": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "Site2VPC"
                },
                "InternetGatewayId": {
                    "Ref": "Site2IGW"
                }
            }
        },
        "Site1PublicSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "Site1VPC"
                },
                "CidrBlock": {
                    "Ref": "pmSite1PubSubnetCidr1"
                },
                "AvailabilityZone": {
                    "Ref": "pmSite1Az1"
                },
                "Tags": [
                    {
                        "Key": "Type",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite1PubSubnetCidr1"
                                    },
                                    {
                                        "Ref": "pmSite1Az1"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "Site1PrivateSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "Site1VPC"
                },
                "CidrBlock": {
                    "Ref": "pmSite1PriSubnetCidr1"
                },
                "AvailabilityZone": {
                    "Ref": "pmSite1Az1"
                },
                "Tags": [
                    {
                        "Key": "Type",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite1PriSubnetCidr1"
                                    },
                                    {
                                        "Ref": "pmSite1Az1"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "Site1PublicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "Site1VPC"
                },
                "CidrBlock": {
                    "Ref": "pmSite1PubSubnetCidr2"
                },
                "AvailabilityZone": {
                    "Ref": "pmSite1Az2"
                },
                "Tags": [
                    {
                        "Key": "Type",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite1PubSubnetCidr2"
                                    },
                                    {
                                        "Ref": "pmSite1Az2"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "Site1PrivateSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "Site1VPC"
                },
                "CidrBlock": {
                    "Ref": "pmSite1PriSubnetCidr2"
                },
                "AvailabilityZone": {
                    "Ref": "pmSite1Az2"
                },
                "Tags": [
                    {
                        "Key": "Type",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite1PriSubnetCidr2"
                                    },
                                    {
                                        "Ref": "pmSite1Az2"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "Site1PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "Site1VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Public Route Table"
                    }
                ]
            }
        },
        "Site1PublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "Site1IGWAttach",
            "Properties": {
                "RouteTableId": {
                    "Ref": "Site1PublicRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "Site1IGW"
                }
            }
        },
        "Site1PublicSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Site1PublicSubnet1"
                },
                "RouteTableId": {
                    "Ref": "Site1PublicRouteTable"
                }
            }
        },
        "Site1PublicSubnet2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Site1PublicSubnet2"
                },
                "RouteTableId": {
                    "Ref": "Site1PublicRouteTable"
                }
            }
        },
        "Site1Private1RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "Site1VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Private Route Table"
                    }
                ]
            }
        },
        "Site1PrivateSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Site1PrivateSubnet1"
                },
                "RouteTableId": {
                    "Ref": "Site1Private1RouteTable"
                }
            }
        },
        "Site1Private2RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "Site1VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Private Route Table"
                    }
                ]
            }
        },
        "Site1PrivateSubnet2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Site1PrivateSubnet2"
                },
                "RouteTableId": {
                    "Ref": "Site1Private2RouteTable"
                }
            }
        },
        "Site1Private1Route": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "Site1Private1RouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "Site1NGW1"
                }
            }
        },
        "Site1Private2Route": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "Site1Private2RouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "Site1NGW2"
                }
            }
        },
        "Site2PublicSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "Site2VPC"
                },
                "CidrBlock": {
                    "Ref": "pmSite2PubSubnetCidr1"
                },
                "AvailabilityZone": {
                    "Ref": "pmSite2Az1"
                },
                "Tags": [
                    {
                        "Key": "Type",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite2PubSubnetCidr1"
                                    },
                                    {
                                        "Ref": "pmSite2Az1"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "Site2PrivateSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "Site2VPC"
                },
                "CidrBlock": {
                    "Ref": "pmSite2PriSubnetCidr1"
                },
                "AvailabilityZone": {
                    "Ref": "pmSite2Az1"
                },
                "Tags": [
                    {
                        "Key": "Type",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite2PriSubnetCidr1"
                                    },
                                    {
                                        "Ref": "pmSite2Az1"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "Site2PublicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "Site2VPC"
                },
                "CidrBlock": {
                    "Ref": "pmSite2PubSubnetCidr2"
                },
                "AvailabilityZone": {
                    "Ref": "pmSite2Az2"
                },
                "Tags": [
                    {
                        "Key": "Type",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite2PubSubnetCidr2"
                                    },
                                    {
                                        "Ref": "pmSite2Az2"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "Site2PrivateSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "Site2VPC"
                },
                "CidrBlock": {
                    "Ref": "pmSite2PriSubnetCidr2"
                },
                "AvailabilityZone": {
                    "Ref": "pmSite2Az2"
                },
                "Tags": [
                    {
                        "Key": "Type",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmSite2PriSubnetCidr2"
                                    },
                                    {
                                        "Ref": "pmSite2Az2"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "Site2PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "Site2VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Public Route Table"
                    }
                ]
            }
        },
        "Site2PublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "Site2IGWAttach",
            "Properties": {
                "RouteTableId": {
                    "Ref": "Site2PublicRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "Site2IGW"
                }
            }
        },
        "Site2PublicSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Site2PublicSubnet1"
                },
                "RouteTableId": {
                    "Ref": "Site2PublicRouteTable"
                }
            }
        },
        "Site2PublicSubnet2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Site2PublicSubnet2"
                },
                "RouteTableId": {
                    "Ref": "Site2PublicRouteTable"
                }
            }
        },
        "Site2Private1RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "Site2VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Private Route Table"
                    }
                ]
            }
        },
        "Site2PrivateSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Site2PrivateSubnet1"
                },
                "RouteTableId": {
                    "Ref": "Site2Private1RouteTable"
                }
            }
        },
        "Site2Private2RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "Site2VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Private Route Table"
                    }
                ]
            }
        },
        "Site2PrivateSubnet2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Site2PrivateSubnet2"
                },
                "RouteTableId": {
                    "Ref": "Site2Private2RouteTable"
                }
            }
        },
        "Site2Private1Route": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "Site2Private1RouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "Site2NGW1"
                }
            }
        },
        "Site2Private2Route": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "Site2Private2RouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "Site2NGW2"
                }
            }
        },
        "Site1PeeringRoutePublic": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": {
                    "Ref": "pmSite2VpcCidr"
                },
                "RouteTableId": {
                    "Ref": "Site1PublicRouteTable"
                },
                "VpcPeeringConnectionId": {
                    "Ref": "Site1ToSite2VPCConnect"
                }
            }
        },
        "Site1PeeringRoutePrivate1": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": {
                    "Ref": "pmSite2VpcCidr"
                },
                "RouteTableId": {
                    "Ref": "Site1Private1RouteTable"
                },
                "VpcPeeringConnectionId": {
                    "Ref": "Site1ToSite2VPCConnect"
                }
            }
        },
        "Site1PeeringRoutePrivate2": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": {
                    "Ref": "pmSite2VpcCidr"
                },
                "RouteTableId": {
                    "Ref": "Site1Private2RouteTable"
                },
                "VpcPeeringConnectionId": {
                    "Ref": "Site1ToSite2VPCConnect"
                }
            }
        },
        "Site2PeeringRoutePublic": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": {
                    "Ref": "pmSite1VpcCidr"
                },
                "RouteTableId": {
                    "Ref": "Site2PublicRouteTable"
                },
                "VpcPeeringConnectionId": {
                    "Ref": "Site1ToSite2VPCConnect"
                }
            }
        },
        "Site2PeeringRoutePrivate1": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": {
                    "Ref": "pmSite1VpcCidr"
                },
                "RouteTableId": {
                    "Ref": "Site2Private1RouteTable"
                },
                "VpcPeeringConnectionId": {
                    "Ref": "Site1ToSite2VPCConnect"
                }
            }
        },
        "Site2PeeringRoutePrivate2": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": {
                    "Ref": "pmSite1VpcCidr"
                },
                "RouteTableId": {
                    "Ref": "Site2Private2RouteTable"
                },
                "VpcPeeringConnectionId": {
                    "Ref": "Site1ToSite2VPCConnect"
                }
            }
        },
        "Site1SG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "Site1VPC"
                },
                "GroupName": "MGMT-SG",
                "GroupDescription": "Enable SSH access",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "icmp",
                        "FromPort": "8",
                        "ToPort": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "MGMT-SG"
                    }
                ]
            }
        },
        "Site2SG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "Site2VPC"
                },
                "GroupName": "WEB-SG",
                "GroupDescription": "Enable SSH, HTTP, and HTTPS access",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "icmp",
                        "FromPort": "8",
                        "ToPort": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "WEB-SG"
                    }
                ]
            }
        },
        "SiteXEC2InstanceRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "RoleName": "POC-ACCESS",
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Sid": "",
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "ec2.amazonaws.com"
                            },
                            "Action": "sts:AssumeRole"
                        }
                    ]
                },
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/AmazonEC2FullAccess",
                    "arn:aws:iam::aws:policy/AmazonS3FullAccess",
                    "arn:aws:iam::aws:policy/AWSLambdaFullAccess",
                    "arn:aws:iam::aws:policy/AmazonSSMFullAccess",
                    "arn:aws:iam::aws:policy/IAMReadOnlyAccess"
                ]
            }
        },
        "SiteXEC2InstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "SiteXEC2InstanceRole"
                    }
                ]
            }
        },
        "Site1EC2Instance1": {
            "Type": "AWS::EC2::Instance",
            "DependsOn": "Site1IGWAttach",
            "Properties": {
                "InstanceType": {
                    "Ref": "pmEc2InstanceType"
                },
                "ImageId": {
                    "Ref": "pmEc2ImageId"
                },
                "KeyName": {
                    "Ref": "pmEc2AccessKeyId"
                },
                "NetworkInterfaces": [
                    {
                        "GroupSet": [
                            {
                                "Ref": "Site1SG"
                            }
                        ],
                        "AssociatePublicIpAddress": "true",
                        "DeviceIndex": "0",
                        "DeleteOnTermination": "true",
                        "SubnetId": {
                            "Ref": "Site1PublicSubnet1"
                        }
                    }
                ],
                "IamInstanceProfile": {
                    "Ref": "SiteXEC2InstanceProfile"
                },
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -v\n",
                                "yum update -y\n",
                                "yum install -y aws-cli unzip tree git\n",
                                "yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_386/amazon-ssm-agent.rpm\n",
                                "start amazon-ssm-agent\n"
                            ]
                        ]
                    }
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "MGMT-1"
                    }
                ]
            }
        },
        "Site1EC2Instance2": {
            "Type": "AWS::EC2::Instance",
            "DependsOn": "Site1IGWAttach",
            "Properties": {
                "InstanceType": {
                    "Ref": "pmEc2InstanceType"
                },
                "ImageId": {
                    "Ref": "pmEc2ImageId"
                },
                "KeyName": {
                    "Ref": "pmEc2AccessKeyId"
                },
                "NetworkInterfaces": [
                    {
                        "GroupSet": [
                            {
                                "Ref": "Site1SG"
                            }
                        ],
                        "AssociatePublicIpAddress": "true",
                        "DeviceIndex": "0",
                        "DeleteOnTermination": "true",
                        "SubnetId": {
                            "Ref": "Site1PublicSubnet2"
                        }
                    }
                ],
                "IamInstanceProfile": {
                    "Ref": "SiteXEC2InstanceProfile"
                },
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -v\n",
                                "yum update -y\n",
                                "yum install -y aws-cli git unzip tree\n",
                                "yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_386/amazon-ssm-agent.rpm\n",
                                "start amazon-ssm-agent\n"
                            ]
                        ]
                    }
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "MGMT-2"
                    }
                ]
            }
        },
        "Site2EC2Instance1": {
            "Type": "AWS::EC2::Instance",
            "DependsOn": "Site2IGWAttach",
            "Properties": {
                "InstanceType": {
                    "Ref": "pmEc2InstanceType"
                },
                "ImageId": {
                    "Ref": "pmEc2ImageId"
                },
                "KeyName": {
                    "Ref": "pmEc2AccessKeyId"
                },
                "NetworkInterfaces": [
                    {
                        "GroupSet": [
                            {
                                "Ref": "Site2SG"
                            }
                        ],
                        "AssociatePublicIpAddress": "false",
                        "DeviceIndex": "0",
                        "DeleteOnTermination": "true",
                        "SubnetId": {
                            "Ref": "Site2PrivateSubnet1"
                        }
                    }
                ],
                "IamInstanceProfile": {
                    "Ref": "SiteXEC2InstanceProfile"
                },
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -v\n",
                                "yum update -y\n",
                                "yum install -y aws-cli nginx unzip tree git\n",
                                "yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_386/amazon-ssm-agent.rpm\n",
                                "start amazon-ssm-agent\n",
                                "service nginx start\n",
                                "cp /usr/share/nginx/html/index.html /usr/share/nginx/html/nginx.html\n",
                                "chkconfig nginx on\n"
                            ]
                        ]
                    }
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "WEB-1"
                    }
                ]
            }
        },
        "Site2EC2Instance2": {
            "Type": "AWS::EC2::Instance",
            "DependsOn": "Site2IGWAttach",
            "Properties": {
                "InstanceType": {
                    "Ref": "pmEc2InstanceType"
                },
                "ImageId": {
                    "Ref": "pmEc2ImageId"
                },
                "KeyName": {
                    "Ref": "pmEc2AccessKeyId"
                },
                "NetworkInterfaces": [
                    {
                        "GroupSet": [
                            {
                                "Ref": "Site2SG"
                            }
                        ],
                        "AssociatePublicIpAddress": "false",
                        "DeviceIndex": "0",
                        "DeleteOnTermination": "true",
                        "SubnetId": {
                            "Ref": "Site2PrivateSubnet2"
                        }
                    }
                ],
                "IamInstanceProfile": {
                    "Ref": "SiteXEC2InstanceProfile"
                },
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -v\n",
                                "yum update -y\n",
                                "yum install -y aws-cli httpd24 php56\n",
                                "yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_386/amazon-ssm-agent.rpm\n",
                                "start amazon-ssm-agent\n",
                                "cp /var/www/noindex/index.html /var/www/html\n",
                                "cp /var/www/noindex/index.html /var/www/html/apache.html\n",
                                "service httpd start\n",
                                "chkconfig httpd on\n"
                            ]
                        ]
                    }
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "WEB-2"
                    }
                ]
            }
        }
    },
    "Outputs": {
        "Site1VPC": {
            "Value": {
                "Ref": "Site1VPC"
            }
        },
        "Site1IGW": {
            "Value": {
                "Ref": "Site1IGW"
            }
        },
        "Site1NGW1": {
            "Value": {
                "Ref": "Site1NGW1"
            }
        },
        "Site1NGW2": {
            "Value": {
                "Ref": "Site1NGW2"
            }
        },
        "Site1EC2Instance1": {
            "Value": {
                "Ref": "Site1EC2Instance1"
            }
        },
        "Site1EC2Instance2": {
            "Value": {
                "Ref": "Site1EC2Instance2"
            }
        },
        "Site2VPC": {
            "Value": {
                "Ref": "Site2VPC"
            }
        },
        "Site2IGW": {
            "Value": {
                "Ref": "Site2IGW"
            }
        },
        "Site2NGW1": {
            "Value": {
                "Ref": "Site2NGW1"
            }
        },
        "Site2NGW2": {
            "Value": {
                "Ref": "Site2NGW2"
            }
        },
        "Site2EC2Instance1": {
            "Value": {
                "Ref": "Site2EC2Instance1"
            }
        },
        "Site2EC2Instance2": {
            "Value": {
                "Ref": "Site2EC2Instance2"
            }
        }
    }
}
